--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,26 @@
 version: "3"
-networks:
-  physicalnet:
-    driver: "ipvlan"
-    driver_opts:
-      parent: eth0 WiFi 2
-    ipam:
-      config:
-        - subnet: "192.168.1.0/24"
-          ip_range: "192.168.1.64/26"
-          gateway: "192.168.1.1"
+# networks:
+#   physicalnet:
+#     driver: "ipvlan"
+#     driver_opts:
+#       parent: eth0 WiFi 2
+#     ipam:
+#       config:
+#         - subnet: "192.168.1.0/24"
+#           ip_range: "192.168.1.64/26"
+#           gateway: "192.168.1.1"
 services:
     server:
         image: localmapper
         command: tail -f /dev/null
-        ports:
-          - 8008:8008 # host:container
+        network_mode: host
+        # ports:
+        #   - 8008:8008 # host:container
         volumes:
           - C:\Users\Phil\Desktop\Golang Projects\localmapper-server:/src
-        networks:
-          physicalnet:
-            ipv4_address: 192.168.1.88
+        # networks:
+        #   physicalnet:
+        #     ipv4_address: 192.168.1.88
     mongodb:
         image: mongo:latest
         ports:
